Finish up to day 4

--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-     "start": "nodemon --exec babel-node --presets=es2015",
-     "test": "jest"
+    "start": "nodemon --exec babel-node --presets=es2015",
+    "test": "jest",
+    "lint": "eslint ."
   },
   "dependencies": {
     "babel-cli": "^6.18.0",
+    "babel-eslint": "^7.1.1",
     "babel-preset-latest": "^6.16.0",
     "eslint": "^3.11.1",
     "jest": "^17.0.3",
